Added VoteCounter Added shared project

--- a/VotingPC/VotingPC.csproj
+++ b/VotingPC/VotingPC.csproj
@@ -29,4 +29,6 @@
     <Resource Include="Assets\Emblem_of_Vietnam.png" />
   </ItemGroup>
 
+  <Import Project="..\SharedLibs\SharedLibs.projitems" Label="Shared" />
+
 </Project>
