--- a/VotingPCNew/VotingPCNew.csproj
+++ b/VotingPCNew/VotingPCNew.csproj
@@ -15,5 +15,8 @@
     <PackageReference Include="sqlite-net-sqlcipher" Version="1.8.116" />
     <PackageReference Include="System.IO.Ports" Version="5.0.1" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <Resource Include="assets\Emblem_of_Vietnam.png" />
+  </ItemGroup>
 </Project>
