--- a/VotingPCNew/assets/config.json
+++ b/VotingPCNew/assets/config.json
@@ -1,18 +1,18 @@
 ﻿{
-    "iconPath": "path",
+    "iconPath": "/assets/Emblem_of_Vietnam.png",
     "header": {
         "text": "CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM",
-        "size": "64px",
-        "style": "bold"
+        "size": "40px",
+        "weight": "bold"
     },
     "subheader": {
         "text": "Độc lập - Tự do - Hạnh phúc",
-        "size": "42px",
+        "size": 36,
         "style": ""
     },
     "title": {
         "text": "Vui lòng chạm ngón tay đã đăng ký lên máy quét vân tay",
-        "size": "76px",
-        "style": ""
+        "size": "60",
+        "weight": "medium"
     }
 }
