Refactor and add DB autocomplete for IDEA ides

--- a/VotingPCNew/VotingPCNew.csproj
+++ b/VotingPCNew/VotingPCNew.csproj
@@ -26,6 +26,7 @@
   
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="copy $(ProjectDir)assets\config.json $(ProjectDir)$(OutDir)" />
+    <Exec Command="copy $(ProjectDir)assets\Emblem_of_Vietnam.png $(ProjectDir)$(OutDir)" />
   </Target>
   
 </Project>
