--- a/VotingPCNew/assets/config.json
+++ b/VotingPCNew/assets/config.json
@@ -1,5 +1,5 @@
 ﻿{
-    "iconPath": "/assets/Emblem_of_Vietnam.png",
+    "iconPath": "Emblem_of_Vietnam.png",
     "header": {
         "text": "CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM",
         "size": "40px",
