Move VotingPCNew to .NET 6 and refactor

--- a/VotingPCNew/VotingPCNew.csproj
+++ b/VotingPCNew/VotingPCNew.csproj
@@ -2,8 +2,10 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <LangVersion>10</LangVersion>
+    <ApplicationIcon>assets\vpc-icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <Import Project="..\SharedLibs\SharedLibs.projitems" Label="Shared" />
