--- a/VotingDatabaseMaker/VotingDatabaseMaker.csproj
+++ b/VotingDatabaseMaker/VotingDatabaseMaker.csproj
@@ -13,6 +13,10 @@
     <PackageReference Include="sqlite-net-sqlcipher" Version="1.8.116" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AsyncDialog\AsyncDialog.csproj" />
+  </ItemGroup>
+
   <Import Project="..\SharedLibs\SharedLibs.projitems" Label="Shared" />
 
 </Project>
