--- a/VotingPCNew/VotingPCNew.csproj
+++ b/VotingPCNew/VotingPCNew.csproj
@@ -10,6 +10,7 @@
   <Import Project="..\SharedLibs\SharedLibs.projitems" Label="Shared" />
 
   <ItemGroup>
+    <PackageReference Include="MaterialDesignExtensions" Version="3.3.0" />
     <PackageReference Include="MaterialDesignThemes" Version="4.3.0" />
     <PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
     <PackageReference Include="ShowMeTheXAML.MSBuild" Version="2.0.0" />
