--- a/VotingPCNew/VotingPCNew.csproj
+++ b/VotingPCNew/VotingPCNew.csproj
@@ -4,7 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
-    <ApplicationIcon>assets\vpc-icon.ico</ApplicationIcon>
+    <ApplicationIcon>Assets\vpc-icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <Import Project="..\SharedLibs\SharedLibs.projitems" Label="Shared" />
@@ -23,12 +23,12 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Resource Include="assets\Emblem_of_Vietnam.png" />
+    <Resource Include="Assets\Emblem_of_Vietnam.png" />
   </ItemGroup>
   
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy $(ProjectDir)assets\config.json $(ProjectDir)$(OutDir)" />
-    <Exec Command="copy $(ProjectDir)assets\Emblem_of_Vietnam.png $(ProjectDir)$(OutDir)" />
+    <Exec Command="copy $(ProjectDir)Assets\config.json $(ProjectDir)$(OutDir)" />
+    <Exec Command="copy $(ProjectDir)Assets\Emblem_of_Vietnam.png $(ProjectDir)$(OutDir)" />
   </Target>
   
 </Project>
