Migrate all common classes to separate class library

--- a/VotingDatabaseMaker/VotingDatabaseMaker.csproj
+++ b/VotingDatabaseMaker/VotingDatabaseMaker.csproj
@@ -15,8 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AsyncDialog\AsyncDialog.csproj" />
+    <ProjectReference Include="..\VotingPC.Domain\VotingPC.Domain.csproj" />
   </ItemGroup>
-
-  <Import Project="..\SharedLibs\SharedLibs.projitems" Label="Shared" />
 
 </Project>
