--- a/VoteCounter/VoteCounter.csproj
+++ b/VoteCounter/VoteCounter.csproj
@@ -16,8 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AsyncDialog\AsyncDialog.csproj" />
+    <ProjectReference Include="..\VotingPC.Domain\VotingPC.Domain.csproj" />
   </ItemGroup>
-
-  <Import Project="..\SharedLibs\SharedLibs.projitems" Label="Shared" />
 
 </Project>
