--- a/FingerGet/FingerGet.csproj
+++ b/FingerGet/FingerGet.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <ImplicitUsings>true</ImplicitUsings>
     <ApplicationIcon>fgg-icon.ico</ApplicationIcon>
   </PropertyGroup>
 
